Fix timeline alignments

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -38,6 +38,7 @@ h6 {
 
 /* Added in { Personal } */
 h4 {
+    margin: 0 0 15px;
     a.category {
         color: inherit;
     }
