--- a/css/timeline.scss
+++ b/css/timeline.scss
@@ -10,8 +10,8 @@
 .timeline:before {
     content: "";
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 60px;
+    bottom: 50px;
     left: 40px;
     width: 2px;
     margin-left: -1.5px;
@@ -22,6 +22,8 @@
     position: relative;
     margin-bottom: 50px;
     min-height: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .timeline>li:before,
@@ -99,6 +101,7 @@
     float: right;
     padding: 0 20px 0 100px;
     text-align: left;
+    margin-left: auto;
 }
 
 .timeline>li.timeline-inverted>.timeline-panel:before {
@@ -146,7 +149,7 @@
     .timeline>li .timeline-panel {
         float: left;
         width: 41%;
-        padding: 0 20px 20px 30px;
+        padding: 20px 20px 20px 30px;
         text-align: right;
     }
 
@@ -177,7 +180,7 @@
 
     .timeline>li.timeline-inverted>.timeline-panel {
         float: right;
-        padding: 0 30px 20px 20px;
+        padding: 20px 30px 20px 20px;
         text-align: left;
     }
 }
@@ -188,7 +191,7 @@
     }
 
     .timeline>li .timeline-panel {
-        padding: 0 20px 20px;
+        padding: 20px 20px 20px;
     }
 
     .timeline>li .timeline-image {
@@ -215,7 +218,7 @@
     }
 
     .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 20px 20px;
+        padding: 20px 20px 20px;
     }
 }
 
@@ -225,7 +228,7 @@
     }
 
     .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
+        padding: 20px 20px 20px 100px;
     }
 
     .timeline>li .timeline-image {
@@ -248,6 +251,6 @@
     }
 
     .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 100px 20px 20px;
+        padding: 20px 100px 20px 20px;
     }
 }
